--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@
 
 body {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
